# Monte-Carlo-Ising-Model

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
Sheet1/: graph.gnu  graph.py  makefile  sheet1  sheet1.cpp  statistics.cpp  statistics.h
include/: data_export.hpp  error_analysis.hpp  hmc_xy_model.hpp  ising_model.hpp  lattice.hpp  measurements.hpp  metropolis.hpp  statistics.hpp  wolff_cluster.hpp
scripts/: plot_errors.py  plot_hmc_xy_parameter_scan.py  plot_hmc_xy_temperature_scan.py  plot_metropolis_chains.py  plot_metropolis_wolff_comparison.py  plot_temperature_scan.py
src/: data_export.cpp  error_analysis.cpp  hmc_xy_model.cpp  ising_model.cpp  lattice.cpp  measurements.cpp  metropolis.cpp  statistics.cpp  wolff_cluster.cpp
tests/: test_error_analysis.cpp  test_hmc_xy_parameter_scan.cpp  test_hmc_xy_temperature_scan.cpp  test_ising_model.cpp  test_lattice.cpp  test_metropolis.cpp  test_metropolis_wolff_comparison.cpp  test_temperature_scan.cpp  test_wolff_cluster.cpp
